--- a/peti/tsconfig.json
+++ b/peti/tsconfig.json
@@ -2,6 +2,11 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+  "module": "ES2015",
+    "esModuleInterop": true,
+  "forceConsistentCasingInFileNames": true,
+    "jsx": "react",
+    "lib": ["es2015"],
     "paths": {
       "@/*": [
         "./*"
