--- a/peti/tsconfig.json
+++ b/peti/tsconfig.json
@@ -6,7 +6,7 @@
     "esModuleInterop": true,
   "forceConsistentCasingInFileNames": true,
     "jsx": "react",
-    "lib": ["es2015"],
+  "lib": ["es2015", "dom"],
     "paths": {
       "@/*": [
         "./*"
